syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.achiley";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zupacademy.achiley;

import "google/protobuf/empty.proto";

service KeyManagerGrpcService {
  rpc cadastrar (CadastroPixRequest) returns (CadastroPixResponse) {}
}
service KeyManagerDeleteService {
  rpc deletar (DeletaPixRequest) returns (google.protobuf.Empty) {}
}

enum TipoDeChaveEnum {
  UNRECOGNIZED_KEY = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum TipoDeContaEnum {
  UNRECOGNIZED_ACCOUNT = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}


message CadastroPixRequest {
  TipoDeChaveEnum tipoDeChave = 1;
  string chave = 2;
  string clienteId = 3;
  TipoDeContaEnum tipoDeConta = 4;
}

message CadastroPixResponse {
  string pixId = 1;
}

message DeletaPixRequest{
  string clienteId = 1;
  string pixId = 2;
}
